Optimize aim assist for osu! game

--- a/settings.json
+++ b/settings.json
@@ -2,16 +2,16 @@
     "confidence_threshold": 0.65,
     "assist_strength": 0.7,
     "enabled": true,
-    "aim_mode": "interpolate",
+    "aim_mode": "smooth",
     "capture_width": 1280,
     "capture_height": 720,
     "model_path": "C:/Users/WIN10/Documents/Osu Model/models/best.pt",
-    "show_overlay": false,
+    "show_overlay": true,
     "target_fps": 144,
     "always_on_top": false,
-    "preview_enabled": true,
+    "preview_enabled": false,
     "target_class": 0,
-    "input_device": "mouse",
+    "input_device": "tablet",
     "use_play_area": true,
     "simple_capture": false,
     "debug_logging": false,
